<resources>
    <string name="app_name">Ape Shop</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">Sign Up</string>

    <string name="home">Home</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="province_state">Province/State</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">Back</string>

    <string-array name="countryArray">
        <item>Select</item>
        <item>Canada</item>
        <item>USA</item>
    </string-array>
    <string-array name="provinceArray">
        <item>Select</item>
        <item>Alberta</item>
        <item>British Columbia</item>
        <item>Manitoba</item>
        <item>New Brunswick</item>
        <item>Newfoundland</item>
        <item>Nova Scotia</item>
        <item>Ontario</item>
        <item>Prince Edward Island</item>
        <item>Quebec</item>
        <item>Saskatchewan</item>
        <item>Territories</item>
    </string-array>
    <string-array name="categoriesArray">
        <item>Select</item>
        <item>Art/Collectable</item>
        <item>Audio</item>
        <item>Baby Items</item>
        <item>Bike</item>
        <item>Book</item>
        <item>Bussiness</item>
        <item>Camera</item>
        <item>CD/DVD</item>
        <item>Clothing</item>
        <item>Computer</item>
        <item>Computer Accessories</item>
        <item>Ectronicsle</item>
        <item>Furniture</item>
        <item>Jewellery</item>
        <item>Phone</item>
        <item>Sport</item>
        <item>Tool</item>
        <item>Toy</item>
        <item>Tv</item>
        <item>Video Games</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_log_in">Log In</string>
    <string name="postal_zip_code">Postal / Zip Code</string>
    <string name="title_activity_post_ad">Post Ad</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="post_ad">Post AD</string>
    <string name="title_activity_my_item">My Items</string>
    <string name="guest">Guest</string>
    <string name="title_activity_edit_item">Edit Item</string>
    <string name="update_ad">Update</string>
    <string name="delete_ad">Delete</string>
    <string name="title_activity_search_ad">Search Ad</string>
    <string name="title_activity_view_item">View Item</string>
    <string name="titleView">Title:</string>
    <string name="descriptionView">Description:</string>
    <string name="emailView">Email:</string>
    <string name="priceView">Price:</string>
    <string name="map">Map</string>
    <string name="contact">Contact</string>
    <string name="log_in">Log In</string>
    <string name="my_items">My Items</string>
    <string name="log_out">Log Out</string>
    <string name="add_image">Add Image</string>
    <string name="edit_image">Edit Image</string>
    <string name="result">Result:</string>

</resources>
