<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.andylao.apeshop.SignUp">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:alpha="0.8"
        android:layout_gravity="center_vertical">

        <EditText
            android:id="@+id/sign_up_first_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textColor"
            android:textColor="@color/textColor"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/sign_up_last_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textColor"
            android:textColor="@color/textColor"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/sign_up_email_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textColor"
            android:textColor="@color/textColor"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/sign_up_password_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textColor"
            android:textColor="@color/textColor"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/sign_up_address_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textColor"
            android:textColor="@color/textColor"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/sign_up_code_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textColor"
            android:textColor="@color/textColor"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/postal_zip_code"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/sign_up_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:text="@string/country" />

        <Spinner
            android:id="@+id/sign_up_country_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textColor"
            android:alpha="0.8"/>

        <TextView
            android:id="@+id/sign_up_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:text="@string/province_state" />

        <Spinner
            android:id="@+id/sign_up_province_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textColor"
            android:alpha="0.8"/>

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/button_background"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/sign_up_back_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:onClick="showHome"
            android:background="@drawable/button_background"
            android:text="@string/back"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
