<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.andylao.apeshop.EditItem">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:alpha="0.8"
            android:background="@color/colorPrimary">

            <EditText
                android:id="@+id/edit_title_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edit_description_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:hint="@string/description"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/edit_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:text="@string/category" />

            <Spinner
                android:id="@+id/edit_category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/textColor"/>

            <EditText
                android:id="@+id/edit_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:ems="10"
                android:hint="Price"
                android:inputType="number" />

            <EditText
                android:id="@+id/edit_email_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edit_address_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edit_postalCode_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:ems="10"
                android:hint="@string/postal_zip_code"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/edit_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:layout_weight="0.5"
                    android:text="@string/country" />

                <TextView
                    android:id="@+id/edit_province"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:layout_weight="0.5"
                    android:text="@string/province_state" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/edit_country_spinner"
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:background="@color/textColor"/>

                <Spinner
                    android:id="@+id/edit_province_spinner"
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:background="@color/textColor"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/edit_image_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/edit_image"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/edit_image_view"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_background"
                android:layout_weight="1"
                android:text="@string/delete_ad" />
            <Button
                android:id="@+id/edit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_background"
                android:layout_weight="1"
                android:text="@string/update_ad" />

        </LinearLayout>

        <Button
            android:id="@+id/post_back_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showItems"
            android:background="@drawable/button_background"
            android:text="@string/back"/>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
